--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,4 +44,5 @@
     <string name="opt_menu_update">update</string>
     <string name="github_page">My github page: \n https://github.com/Valentin-Golyonko</string>
     <string name="alarm">ALARM</string>
+    <string name="tv_widget_name">Home weather station</string>
 </resources>
